--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context=".MainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recylerViewId"
         android:layout_width="409dp"
         android:layout_height="729dp"
         android:layout_marginStart="1dp"
