--- a/app/src/main/res/layout/fileview.xml
+++ b/app/src/main/res/layout/fileview.xml
@@ -2,12 +2,29 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="50dp"
+    android:layout_margin="5dp"
+    android:elevation="5dp"
+    android:background="#F8E8C9"
+android:id="@+id/linearid"
     xmlns:tools="http://schemas.android.com/tools"
     android:gravity="fill_horizontal">
 <ImageView
     android:layout_width="36dp"
     android:layout_height="36dp"
+    tools:src="@drawable/foldericon"
+    android:layout_gravity="center"
+    android:layout_margin="5dp"
+    android:id="@+id/file_iconId"
     />
-
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    tools:text="Download"
+    android:layout_gravity="center"
+    android:textColor="@color/black"
+    android:layout_margin="5dp"
+    android:textSize="15dp"
+    android:id="@+id/file_textId"
+    />
 </LinearLayout>
